[gd_scene load_steps=18 format=3 uid="uid://de7m3llpdphyc"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_4eyon"]
[ext_resource type="FontFile" uid="uid://dowfwp8lbv1e7" path="res://Aclonica-Regular.ttf" id="1_u4ra3"]
[ext_resource type="PackedScene" uid="uid://bk3pb41vy4gyu" path="res://Enemy/slender_man_slender_the_arrival/scene.gltf" id="3_pq8qo"]
[ext_resource type="PackedScene" uid="uid://blj53sik44g5l" path="res://Enemy/blender/scene.gltf" id="4_3h411"]
[ext_resource type="AudioStream" uid="uid://2loj1ynxnqxm" path="res://sound/music.mp3" id="5_oxqhm"]

[sub_resource type="LabelSettings" id="LabelSettings_ll8w4"]
font = ExtResource("1_u4ra3")
font_size = 100

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fuiec"]
sky_top_color = Color(0.239216, 0.243137, 0.74902, 1)
sky_horizon_color = Color(1, 0.478431, 0.309804, 1)

[sub_resource type="Sky" id="Sky_0ml64"]
sky_material = SubResource("ProceduralSkyMaterial_fuiec")

[sub_resource type="Environment" id="Environment_f13ko"]
background_mode = 2
sky = SubResource("Sky_0ml64")

[sub_resource type="Animation" id="Animation_3oymh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_npyd2"]
resource_name = "main"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i1mih"]
_data = {
"RESET": SubResource("Animation_3oymh"),
"main": SubResource("Animation_npyd2")
}

[sub_resource type="LabelSettings" id="LabelSettings_hofef"]
font_size = 30
font_color = Color(0.792157, 0, 0.258824, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mnejg"]
font = ExtResource("1_u4ra3")
font_size = 30
outline_size = 1

[sub_resource type="Animation" id="Animation_fkd76"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_hriso"]
resource_name = "main"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 25, 30]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_53rd8"]
_data = {
"RESET": SubResource("Animation_fkd76"),
"main": SubResource("Animation_hriso")
}

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4eyon")

[node name="Label" type="Label" parent="."]
offset_right = 1285.0
offset_bottom = 154.0
text = "Blender Man"
label_settings = SubResource("LabelSettings_ll8w4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="play" type="Button" parent="."]
offset_left = 440.0
offset_top = 167.0
offset_right = 852.0
offset_bottom = 263.0
theme_override_fonts/font = ExtResource("1_u4ra3")
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="quit" type="Button" parent="."]
offset_left = 440.0
offset_top = 482.0
offset_right = 852.0
offset_bottom = 578.0
theme_override_fonts/font = ExtResource("1_u4ra3")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="credits" type="Button" parent="."]
offset_left = 443.0
offset_top = 276.0
offset_right = 855.0
offset_bottom = 372.0
theme_override_fonts/font = ExtResource("1_u4ra3")
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="set" type="Button" parent="."]
offset_left = 443.0
offset_top = 381.0
offset_right = 855.0
offset_bottom = 477.0
theme_override_fonts/font = ExtResource("1_u4ra3")
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Node3D" type="Node3D" parent="."]

[node name="scene" parent="Node3D" instance=ExtResource("3_pq8qo")]
transform = Transform3D(-0.005, 0, -4.37114e-10, 0, 0.005, 0, 4.37114e-10, 0, -0.005, 0, 0.846256, 0)

[node name="scene2" parent="Node3D/scene" instance=ExtResource("4_3h411")]
transform = Transform3D(50, 0, 0, 0, 62.5, 0, 0, 0, 50, -3.24293e-06, 196.972, 37.0948)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Node3D"]
environment = SubResource("Environment_f13ko")

[node name="cam" type="Node3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.77636e-13, 1.62277, -0.0999091)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node3D/cam"]
autoplay = "main"
libraries = {
"": SubResource("AnimationLibrary_i1mih")
}

[node name="Camera3D" type="Camera3D" parent="Node3D/cam"]
transform = Transform3D(-1, 0, -2.53518e-06, 5.53292e-07, 0.975894, -0.218245, 2.47407e-06, -0.218245, -0.975894, 2.27374e-13, -1.00546, -3.96832)

[node name="Label2" type="Label" parent="."]
offset_left = 1079.0
offset_top = 658.0
offset_right = 1279.0
offset_bottom = 703.0
text = "Â©Dev Avishka"
label_settings = SubResource("LabelSettings_hofef")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_oxqhm")
volume_db = -0.034
pitch_scale = 0.68
autoplay = true

[node name="Label3" type="Label" parent="."]
offset_left = 804.0
offset_top = 142.0
offset_right = 1208.0
offset_bottom = 195.0
rotation = -0.256287
text = "left click to collect notes"
label_settings = SubResource("LabelSettings_mnejg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label3"]
autoplay = "main"
libraries = {
"": SubResource("AnimationLibrary_53rd8")
}

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="set" to="." method="_on_set_pressed"]
